# wrand

./: Cargo.toml  README.md
.cargo/: config
examples/: how_to_use.rs  iterator_glibc.rs  rand_float.rs  rand_glibc.rs  rand_glibctypen.rs  rand_msvcrt.rs  seed.rs  shuffle_deck.rs  test_derive.rs
src/: gen.rs  lib.rs
